--- a/templates/all_movies.html
+++ b/templates/all_movies.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %} {% block title %}All Movies{% endblock %} {% block
 body %}
+<h1>Movies</h1>
 <ul>
   {% for movie in movies %}
   <li><a href="/movies/{{ movie.movie_id }}">{{ movie.title }}</a></li>
   {% endfor %}
 </ul>
-{% endblock body %}
+{% endblock %}
