Added a specific user's movie ratings to their user page

--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -4,4 +4,10 @@
 
 <p>{{ user.email }}</p>
 
+<ol>
+  {% for rating in movie_ratings %}
+  <li>{{ rating['movie_title'] }} ... {{ rating['rating'] }}</li>
+  {% endfor %}
+</ol>
+
 {% endblock %}
