--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,6 +6,7 @@ block body %}
 <ul>
   <li><a href="/movies">View all movies</a></li>
   <li><a href="/users">View all users</a></li>
+  <li><a href="/movie-rating">Rate a movie</a></li>
 </ul>
 
 <h2>Create an Account</h2>
