Made the ratings of each user more readable

--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -6,7 +6,7 @@
 
 <ol>
   {% for rating in movie_ratings %}
-  <li>{{ rating['movie_title'] }} ... {{ rating['rating'] }}</li>
+  <li>{{ rating['movie_title'] }}: {{ rating['rating'] }}/5</li>
   {% endfor %}
 </ol>
 
